estrutur básica de um componente.

--- a/01-web-components/desafio-01/index.html
+++ b/01-web-components/desafio-01/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal de Notícias Galáticas</title>
     <link rel="stylesheet" href="./styles/card.css">
+    <script src="./src/components/CardNews.js" defer></script>
+    <script src="./src/components/TituloDinamico.js"></script>
 </head>
 <body>
     <div class="container">
@@ -20,5 +22,7 @@
             </div>
         </div>
     </div>
+    <titulo-dinamico></titulo-dinamico>
+    <card-news></card-news>
 </body>
 </html>
