inserindo propriedades em um componente customizado

--- a/01-web-components/desafio-01/index.html
+++ b/01-web-components/desafio-01/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal de Notícias Galáticas</title>
     <link rel="stylesheet" href="./styles/card.css">
-    <script src="./src/components/CardNews.js" defer></script>
-    <script src="./src/components/TituloDinamico.js"></script>
+    <script src="./src/components/CardNews.js"></script>
+    <script src="./src/components/TituloDinamico.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,9 @@
             </div>
         </div>
     </div>
-    <titulo-dinamico></titulo-dinamico>
+    <titulo-dinamico titulo="urgente"></titulo-dinamico>
+    <titulo-dinamico titulo="Leonardo"></titulo-dinamico>
+    <titulo-dinamico titulo="Marla e Kipa"></titulo-dinamico>
     <card-news></card-news>
 </body>
 </html>
